added rules page

--- a/index.html
+++ b/index.html
@@ -3,15 +3,22 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Simon</title>
+  <title>Simon Game</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
 </head>
 
 <body>
-  <h1 id="level-title">Press A Key or Click to Start</h1>
+  <h1 id="level-title">Simon Game <br> Press A Key or Click to Start</h1>
+  <p id="rules"> Rules: <br>
+    Simon is a memory game. To play, click on the squares in the order that the next square flashes. <br>
+    Eg: <br>
+    level 1: flashes blue - click blue <br>
+    level 2: flashes red - click blue and next red <br>
+    level 3: flashes yellow - click blue, red and next yellow. <br>Continue till failure!
+  </p>
   <div class="container">
-    <div lass="row">
+    <div class="row">
 
       <div type="button" id="green" class="btn green">
 
